# Agent_paper_explainer

./: .env  CHAT_INTERFACE.md  LASSO,STLS,L2_comparison.ipynb  README.md  SINDy_and_DSINDy.ipynb  SINDy_and_SINDy_PI.ipynb  app.py  arxiv_manager.py  citation_network.py  config.py  grammarly_manager.py  grobid_manager.py  main.py  overleaf_manager.py  pdf_loader.py  pdf_loader_minimal.py  pyproject.toml  qa_chain.py  requirements.txt  test_app.py  test_chat.py  test_deepseek.py  test_grobid.py  test_minimal.py  test_new_features.py  vector_store.py
chroma_db/: chroma.sqlite3
